--- a/resources/commander/templates/unit.mustache
+++ b/resources/commander/templates/unit.mustache
@@ -3,6 +3,8 @@ Description={{ description }}
 
 [Service]
 ExecStart={{& command }}
+Restart=always
+RestartSec=1
 
 [Install]
 WantedBy={{ target }}
