--- a/resources/commander/templates/unit.mustache
+++ b/resources/commander/templates/unit.mustache
@@ -1,10 +1,12 @@
 [Unit]
 Description={{ description }}
+StartLimitIntervalSec=2
+StartLimitBurst=5
 
 [Service]
 ExecStart={{& command }}
 Restart=always
-RestartSec=1
+RestartSec=100ms
 
 [Install]
 WantedBy={{ target }}
